Lab 1 + Lab 2 WIP.